Fix collapsed nav on internal page

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -452,6 +452,9 @@ footer {
     #nav {
       display: none;
     }
+    .collapsed {
+      display: block !important;
+    }
   }
   .sponsors {
     ul {
